kubernetes/services/checkoutservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: checkoutservice
  name: checkoutservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: checkoutservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: checkoutservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_checkoutservice:latest
          imagePullPolicy: Always
          name: checkoutservice
          ports:
            - containerPort: 5050
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: tcp
      port: 5050
      protocol: TCP
      targetPort: 5050
