kubernetes/services/currencyservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currencyservice
  name: currencyservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: currencyservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currencyservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_currencyservice:latest
          imagePullPolicy: Always
          name: currencyservice
          ports:
            - containerPort: 7000
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: currencyservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
    - name: tcp
      port: 7000
      protocol: TCP
      targetPort: 7000
