kubernetes/services/emailservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: emailservice
  name: online-boutique-emailservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: emailservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: emailservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_emailservice:latest
          imagePullPolicy: Always
          name: emailservice
          ports:
            - containerPort: 5000
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: emailservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
    - name: tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
