kubernetes/services/paymentservice-deployent.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paymentservice
  name: paymentservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: paymentservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: paymentservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_paymentservice:latest
          imagePullPolicy: Always
          name: paymentservice
          ports:
            - containerPort: 50050
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: paymentservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - name: tcp
      port: 50050
      protocol: TCP
      targetPort: 50050
