kubernetes/services/productcatalogservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: productcatalogservice
  name: productcatalogservice-deployment
  namespace: online-boutique
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: productcatalogservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: productcatalogservice
      namespace: online-boutique
    spec:
      containers:
        - image: thuanlp/online_boutique_productcatalogservice:latest
          imagePullPolicy: Always
          name: productcatalogservice
          ports:
            - containerPort: 3550
              name: tcp
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-service
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
    - name: tcp
      port: 3550
      protocol: TCP
      targetPort: 3550
